[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
name = "msp430-rtfm-macros"
version = "0.1.0"

[dependencies]
error-chain = "0.10.0"
quote = "0.3.15"
syn = "0.11.11"

[dependencies.rtfm-syntax]
git = "https://github.com/japaric/rtfm-syntax"
rev = "7ae2ea2bbcc7dac2c5d3ade197f24bd97bf3c29c"

[lib]
proc-macro = true
