[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
name = "msp430-rtfm-macros"
version = "0.1.0"

[dependencies]
error-chain = "0.10.0"
quote = "0.3.15"
syn = "0.11.11"

[dependencies.rtfm-syntax]
git = "https://github.com/japaric/rtfm-syntax"
rev = "631e4b044481ae23e40951ebf707b02d44db9daf"

[lib]
proc-macro = true
